[B] Fix padding collapse on BE dashboard filters
Resolves #2198

--- a/client/src/theme/styles/components/backend/list/entity/_entity-list-search.scss
+++ b/client/src/theme/styles/components/backend/list/entity/_entity-list-search.scss
@@ -103,6 +103,7 @@
 
       .entity-list-search__options-label {
         &--empty {
+          display: block;
           padding-top: 0;
         }
         padding-top: 30px;
